--- a/index.html
+++ b/index.html
@@ -6,49 +6,54 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+	<link class="nav-font" href="http://fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<nav class="top-nav">
 		<div class="content">
 			<ul class="links">
 				<li>About Me</li>
-				<li>Travel</li>
-				<li>Food</li>
-				<li>Books</li>
+				<li>Portfolio</li>
+				<li>Contact Me</li>
 			</ul>
 			<img class="logo" src="http://www.gmhc.org/files/editor/image/Renew-Gala/AuctionLogos/GK%20logo.jpg" alt="GK" width="26" style="margin-left: 14px; height:70px; width:100px;">
 		</div>
 	</nav>
 
-	<section class="banner">
-		<img class="background" src="http://alqueria.cl/bg/images/image1.jpg">
+	<section class="image">
 			<h1>Grace Ku</h1>
 			<h3>Web Developer</h3>
 	</section>
 	
-	<section class="Projects">
-		<div class="content">
+	<section class="projects">
+		<img src="http://alqueria.cl/bg/images/image1.jpg">
 			<h1>Projects</h1>
 				<ul class="work">
 					<li>
-						<img width= "150" height="130" src="file:///Users/graceku/portfolio/images/Karma%20Clone.png">
+						<a href="https://github.com/kugracee/karma.git"><img width= "150" height="130" src="file:///Users/graceku/portfolio/images/Karma%20Clone.png" alt="Karma"></a>
 						<div class="caption">
 							<h4>Karma Page Clone</h4></div>
 					</li>
 					<li>
-						<img width= "150" height="130" src="file:///Users/graceku/portfolio/images/nyt%20hack.png">
+						<img width= "150" height="130" src="file:///Users/graceku/portfolio/images/nyt%20hack.png"></a>
 						<div class="caption">
 							<h4>NYT Hack</h4></div>
 					</li>
 					<li>
-						<img width= "150" height="130" src="file:///Users/graceku/portfolio/images/About%20Me%20Page.png">
+						<a href="http://codepen.io/kugrace/pen/pywgLa">
+						<img width= "150" height="130" src="file:///Users/graceku/portfolio/images/About%20Me%20Page.png"></a>
 						<div class="Caption">
 							<h4>About Me Page</h4></div>
 					</li>
 				</ul>
-		</div>
 	</section>
-
+	<footer class="content-footer">
+		<p class="body-copy">Check out my Social Networks</p>
+		<ul class="social">
+			<li> <a href="https://www.linkedin.com/in/grace-ku-39344a1b">Linkedin</a></li>
+			<li> <a href="https://www.facebook.com/profile.php?id=9129689">Facebook</a></li>
+		</ul>
+	</footer>
 
 </body>
 
