--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
 	</section>
 	
 	<section class="projects">
-		<img src="http://alqueria.cl/bg/images/image1.jpg">
 			<h1>Projects</h1>
 				<ul class="work">
 					<li>
-						<a href="https://github.com/kugracee/karma.git"><img width= "150" height="130" src="file:///Users/graceku/portfolio/images/Karma%20Clone.png" alt="Karma"></a>
+						<a href="https://github.com/kugracee/karma.git"><img width= "150" height="130" src="images/Karma_Clone.png" alt="Karma"></a>
 						<div class="caption">
 							<h4>Karma Page Clone</h4></div>
 					</li>
 					<li>
-						<img width= "150" height="130" src="file:///Users/graceku/portfolio/images/nyt%20hack.png"></a>
+						<a href="https://github.com/kugracee/portfolio.git">
+						<img width= "150" height="130" src="images/nyt_hack.png"></a>
 						<div class="caption">
 							<h4>NYT Hack</h4></div>
 					</li>
 					<li>
 						<a href="http://codepen.io/kugrace/pen/pywgLa">
-						<img width= "150" height="130" src="file:///Users/graceku/portfolio/images/About%20Me%20Page.png"></a>
+						<img width= "150" height="130" src="images/About_Me_Page.png"></a>
 						<div class="Caption">
 							<h4>About Me Page</h4></div>
 					</li>
