--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 			<h1>Grace Ku</h1>
 			<h3>Web Developer</h3>
 	</section>
+	<section class= "about-me">
+		<h1>About Me</h1>
+			<p> Hi, I'm Grace and I am an aspiring Web Developer. I currently reside in Boston, MA and have grown up here all my life. I have eternal <strong>wanderlust</strong> and plan a big trip every year. I can read for hours on end, am somehow always <i>cold</i> and have an amazingly dangerous sweet-tooth.</p>
+			<p>Feel free to snoop around and welcome to my Portfolio!</p>
+	</section>
 	
 	<section class="projects">
 			<h1>Projects</h1>
